ecmascript/parser/tests/test262-error-references/fail/d4cf8ae9018f6a28.js.stderr
error: Not an utf-8 character: 55296
 --> $DIR/tests/test262-parser/fail/d4cf8ae9018f6a28.js:1:1
  |
1 | \uD800\uDC00
  | ^^^^^^

